# optagent

./: .env  .env.example  .env.swp  .gitignore  CONTEXT.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.yaml  pyproject.toml
backend/data/: sessions.db
backend/data/chroma/: chroma.sqlite3
backend/skills/analyze-results/: SKILL.md
backend/skills/collect-data/: SKILL.md
backend/skills/define-objective/: SKILL.md
backend/skills/design-doe/: SKILL.md
backend/skills/generate-report/: SKILL.md
backend/skills/identify-params/: SKILL.md
backend/skills/knowledge-retrieval/: SKILL.md
backend/src/optagent/: __init__.py  config.py  main.py
backend/src/optagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/optagent/agent/: analysis_tools.py  factory.py  tools.py
backend/src/optagent/backends/: __init__.py
backend/src/optagent/event/: transformer.py  types.py
backend/src/optagent/kb/: embedding.py  ingestion.py  retriever.py
backend/src/optagent/models/: session.py
backend/src/optagent/persistence/: store.py
backend/src/optagent/server/: session_manager.py  ws.py
backend/src/optagent/server/routes/: __init__.py  data.py  kb.py  sessions.py  skills.py  workflows.py
backend/src/optagent/skills/: registry.py  types.py
backend/src/optagent/workflow/: builder.py  loader.py  node_runner.py  types.py
backend/workflows/: process-optimization.yaml
docs/: roadmap.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: test_verify.py
(+29 files in other folders)
