[project]
name = "optagent"
version = "0.1.0"
description = "Agent-based process parameter optimization framework"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14",
    "chromadb>=0.5",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
