[project]
name = "optagent"
version = "0.1.0"
description = "Agent-based process parameter optimization framework"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.0,<0.7.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14",
    "chromadb>=0.5",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.18",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"




[tool.setuptools.packages.find]
where = ["src"]
